@@ -21,6 +21,10 @@ PHP                                                                        NEWS
   . Fixed bug GH-8143 (Crashes in zend_accel_inheritance_cache_find since
     upgrading to 8.1.3 due to corrupt on-disk file cache). (turchanov)
 
+- OpenSSL:
+  Fixed bug GH-12489 (Missing sigbio creation checking in openssl_cms_verify).
+  (Jakub Zelenka)
+
 - SOAP:
   . Fixed bug GH-12392 (Segmentation fault on SoapClient::__getTypes).
     (nielsdos)
